# ai-crypto-hedge-fund

./: .gitignore  README.md  pyproject.toml
config/: prompts.json
src/: main.py
src/agents/: base_agent.py  brian_armstrong.py  charles_hoskinson.py  cz_binance.py  elon_musk.py  michael_saylor.py  portfolio_manager.py  risk_manager.py  technicals.py  vitalik_buterin.py
src/graph/: state.py  visualization.py
src/tools/: analysts.py  backtester.py  data_fetcher.py  display.py  llm_interface.py  models.py  utils.py  visualization.py  visualize.py
