[tool.poetry]
name = "crypto-ai-hedge-fund"
version = "0.1.0"
description = "A crypto AI hedge fund that simulates trading agents and backtests strategies."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12.4"
ccxt = "^4.3.0"
yfinance = "^0.2.0"
pandas = "^2.2.0"
matplotlib = "^3.8.0"
mplfinance = "^0.12.0"
numpy = "^1.26.0"
python-dotenv = "^1.0.0"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
colorama = "^0.4.0"
questionary = "^2.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"